# bitcoin-tx-demo

./: .env.example  .gitignore  Cargo.toml  README.md  run_btc_regtest.sh
examples/: Makefile  dummy.rs  init.sh  regtest_dummy.rs
scripts/: Makefile  init.sh  run_btc_regtest.sh
src/: client.rs  faucet.rs  keygen.rs  lib.rs  trx.rs  tx.rs
src/bitcoin_node/: config.rs  mod.rs  regtest.rs  test.rs  utils.rs
src/bitcoin_node/account/: mod.rs  test.rs
src/bitcoin_node/tx/: mod.rs  presing_taproot.rs  presing_tx_taproot.rs  sign_taproot.rs  sign_tx_taproot.rs
src/bitcoin_node/tx/taproot_tree_tx/: key_path_spend.rs  key_path_spend_with_presign.rs  mod.rs  script_path_spend.rs
src/bitcoin_node/wallet/: chain_info.rs  mod.rs  test.rs
src/mempool/: client.rs  faucet.rs  mod.rs  tx.rs
