[package]
name = "bitcoin-taproot-transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "*", features = ["rand-std"]}
secp256k1 = { version = "0.29.0", default-features = false, features = ["hashes", "alloc"] }

tokio = { version = "*", features = ["full"] }
esplora-client = "*"

reqwest = {version = "0.11", features = ["json", "socks"]}
anyhow= "*"


once_cell = "1.19.0"
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }



